feat: Add header, prisma db utils, login, signup
Header
- Created a dynamic header component that takes text as a prop similar to how my props are set up in Figma

Prisma
- Was encountering a bug where every new change was creating an instance of Prisma and was firing warnings. Created a util (db.ts) that prevents this.

Login / Signup
- Separated the login/signup flow to create a more semantic experience and less confusion for user.
- Split into login.js and signup.js -> uses AuthForm.js component.
  - I also just realized that I could make the buttons text dynamic props as well.
- Homepage now has two buttons, one for signup, one for login (even though they do the exact same thing functionally since we create a new user if there isn't an existing one)

--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,11 +1,27 @@
 @use "./partials/abstracts/mixins" as *;
 @use "./partials/abstracts/variables" as *;
 
-.form {
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+  // height: fill-available;
+  // height: -webkit-fill-available;
+}
+
+.container {
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+  margin: 0 1rem;
+}
+
+.form {
+  grid-column: 2 / span 2;
   border: 0.5px solid $black;
-  grid-column: 2/4;
-  grid-row: 6;
   height: fit-content;
 
   &Group {
@@ -15,15 +31,16 @@
     &__label {
       width: 52px;
       padding-right: 8px;
+      vertical-align: baseline;
+    }
+
+    &__input {
+      flex-grow: 1;
     }
   }
 
   &__button {
-    grid-column: 2/4;
-    grid-row: 10;
-    width: fit-content;
-    justify-self: center;
-    align-content: center;
-    height: fit-content;
+    margin-top: 3rem;
+    align-self: center;
   }
 }
