--- a/styles/partials/base/_reset.scss
+++ b/styles/partials/base/_reset.scss
@@ -57,6 +57,8 @@ textarea {
   resize: none;
   outline: none;
   vertical-align: center;
+  overflow: hidden;
+  padding: 0;
 }
 
 /* Centering placeholder text */
