--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,49 +4,15 @@
 @use "./partials/abstracts/variables" as *;
 
 button {
+  color: $black;
   padding: $p0 $p1;
   border: 0.5px solid $black;
   border-radius: 32px;
   background-color: $white;
   text-transform: uppercase;
+  width: fit-content;
 
   @include tablet {
     padding: $p1 $p2;
   }
-}
-
-main {
-  display: grid;
-  height: 100vh;
-  grid-template-columns: repeat(4, [col-start] 1fr);
-  grid-template-rows: repeat(12, [col-start] 1fr);
-  grid-gap: 1rem 1rem;
-  margin: 0 1rem;
-}
-
-form {
-  display: grid;
-  border: 0.5px solid $black;
-  grid-column: 2/4;
-  grid-row: 6;
-  height: fit-content;
-
-  .form__group {
-    display: flex;
-    padding: 8px;
-
-    label {
-      width: 52px;
-      padding-right: 8px;
-    }
-  }
-}
-
-button {
-  grid-column: 2/4;
-  grid-row: 10;
-  width: fit-content;
-  justify-self: center;
-  align-content: center;
-  height: fit-content;
 }
