--- a/styles/partials/base/_typography.scss
+++ b/styles/partials/base/_typography.scss
@@ -28,6 +28,7 @@ h1 {
   font-size: 2rem; // 32px
   line-height: 2.625rem; // 42px
   font-weight: 400; // Regular
+  color: $black;
 
   @include tablet {
     font-size: 4.5rem; // 72px
@@ -41,6 +42,7 @@ h2 {
   font-size: 1.5rem; // 24px
   line-height: 2rem; // 2rem
   font-weight: 300; // Light
+  color: $black;
 
   @include tablet {
     font-size: 4rem; // 64px
@@ -54,6 +56,7 @@ h3 {
   font-size: 1.25rem; // 20px
   line-height: 1.625rem; // 26px
   font-weight: 400; // Regular
+  color: $black;
 
   @include tablet {
     font-size: 2.25rem; // 36px
@@ -67,6 +70,7 @@ h4 {
   font-size: 0.75rem; // 12px
   line-height: 1rem; // 1rem
   font-weight: 300; // Light
+  color: $black;
 
   @include tablet {
     font-size: 1.25rem; // 20px
@@ -81,6 +85,7 @@ button {
   font-size: 0.5625rem; // 9px
   line-height: 0.75rem; // 12px;
   font-weight: 350; // Book
+  color: $black;
 
   @include tablet {
     font-size: 0.875rem; // 14px
@@ -97,9 +102,14 @@ textarea {
   font-size: 0.5625rem; // 9px
   line-height: 0.75rem; // 12px;
   font-weight: 300; // Light
+  color: $black;
 
   @include tablet {
     font-size: 0.875rem; // 14px
     line-height: 1.125rem; // 18px
   }
+}
+
+::placeholder {
+  color: $black;
 }
