refactor: Absolute imports
https://nextjs.org/docs/advanced-features/module-path-aliases

Refactored code to allow for absolute imports instead of relative nested ones (../../../component/example) -> (@/components/example)

Updated all components, pages, and scss to reflect this new change.

This makes the code a lot cleaner and allows me to move things around during development and not break any imports.

--- a/components/Forms/Form.module.scss
+++ b/components/Forms/Form.module.scss
@@ -1,5 +1,5 @@
-@use "./partials/abstracts/mixins" as *;
-@use "./partials/abstracts/variables" as *;
+@use "@/partials/abstracts/mixins" as *;
+@use "@/partials/abstracts/variables" as *;
 
 .main {
   display: flex;
