--- a/styles/partials/base/_typography.scss
+++ b/styles/partials/base/_typography.scss
@@ -1,5 +1,5 @@
-@use "../abstracts/mixins" as *;
-@use "../abstracts/variables" as *;
+@use "@/partials/abstracts/mixins" as *;
+@use "@/partials/abstracts/variables" as *;
 
 @font-face {
   font-family: "F-Regular";
