feat: Add new user "Profile" form
Did it in two ways:
- AuthNewUser-temp -> this followed the Udemy React guide so I could learn how to do it manually using useRef. This method had tons of nuances though and repeated code, and while I could create a custom hook, it seemed unecessary when there were existing packages that do this for me.

This is where react-hook-forms comes in.
- AuthNewUser -> this uses react-hook-forms with validation.
  - Error messages appear under the form if invalid.

Next steps:
- Do something on submit.

--- a/components/Forms/Form.module.scss
+++ b/components/Forms/Form.module.scss
@@ -39,6 +39,11 @@
     }
   }
 
+  &__errors {
+    margin-top: 1rem;
+    align-self: center;
+  }
+
   &__button {
     margin-top: 3rem;
     align-self: center;
