feat: Add campaign dashboard, add logic for campaigns db
Restructured the form so that when a new user creates an account, they are asked for their role / job title.
This will be automatically pre-filled into their teams cards when they make a new campaign.
If the user wants to change their role, they can do so freely (not implemented yet).
This just skips one step in the process so they don't have to add it every time.

On the dashboard page, it now looks and functions like the Figma design.
There is a lot of extra component logic that isn't needed if I code the component locally
See: https://nextjs.org/docs/api-reference/next/link

Since I'm using Next.js links, the child of the link is a component which means I need to add React.forwardRef and ton of boiler plate code.
After this commit, I'm planning on deleting the component and coding it locally since it's kind of useless to have extra code for 2 lines (div + p tag)

--- a/styles/partials/base/_reset.scss
+++ b/styles/partials/base/_reset.scss
@@ -79,3 +79,36 @@ input[type="text"]::placeholder {
 :-ms-input-placeholder {
   text-align: center;
 }
+
+/* Relative positioning for date picker
+Display block to center date on Safari */
+input[type="date"] {
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+/* Make calendar picker take up entire input field.
+https://stackoverflow.com/a/45461709/19416953 */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  background: transparent;
+  color: transparent;
+  cursor: pointer;
+  height: auto;
+  width: auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+/* adjust increase/decrease button */
+input[type="date"]::-webkit-inner-spin-button {
+  z-index: 1;
+}
+
+/* adjust clear button */
+input[type="date"]::-webkit-clear-button {
+  z-index: 1;
+}
