--- a/components/Forms/Form.module.scss
+++ b/components/Forms/Form.module.scss
@@ -21,7 +21,7 @@
 
 .form {
   grid-column: 2 / span 2;
-  border: 0.5px solid $black;
+  border: 0.75px solid $black;
   height: fit-content;
 
   &Group {
@@ -29,8 +29,9 @@
     padding: 8px;
 
     &__label {
-      width: 52px;
-      padding-right: 8px;
+      // width: 52px;
+      min-width: 64px;
+      padding-right: 16px;
       vertical-align: baseline;
     }
 
