--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,8 @@
 @use "@/partials/abstracts/mixins" as *;
 @use "@/partials/abstracts/variables" as *;
 
-button {
+button,
+.button {
   color: $black;
   padding: $p0 $p1;
   border: 0.5px solid $black;
