--- a/components/Moodboard/Moodboard.module.scss
+++ b/components/Moodboard/Moodboard.module.scss
@@ -13,9 +13,14 @@
 // }
 
 .moodboard {
+  position: relative;
   column-count: 2;
   column-gap: 1rem;
   margin: 0 1rem;
+
+  // &__container {
+  //   position: relative;
+  // }
 
   &__image {
     // grid-column: span 2;
