--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -27,4 +27,12 @@
   &__picker::-webkit-file-upload-button {
     visibility: hidden;
   }
+
+  &__dropzone {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    // background-color: rgba($color: #ff0000, $alpha: 0.1);
+  }
 }
