feat: Add paste link to upload
When a user pastes a url on the window, it checks if it's a url.
If so, it will also run a check if it's an image url. This url will then get inputted into the database.

If the pasted contents are a file instead, then run upload function normally.

Resources:
- Check if url is an image: https://stackoverflow.com/a/9714891/19416953

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -1,23 +1,14 @@
 @use "@/partials/abstracts/mixins" as *;
 @use "@/partials/abstracts/variables" as *;
 
-.menu {
+.container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   // height: -webkit-fill-available;
 
-  &__item {
-    text-transform: uppercase;
-    padding-top: 0.5rem;
-  }
-
-  &__back {
-    position: absolute;
-    width: 3rem;
-    aspect-ratio: 1/1;
-    margin: 1rem;
+  button {
+    margin-right: 1rem;
   }
 }
