feat: Add header menu on mobile
Still not perfect and needs different pathing (asPath, basePath) depending on what screen its being rendered on, and also on dashboard none of the menu items are relevant since theres no active campaign selected.

Possibly add a links to "root" directories of moodboards that shows from all campaigns? Not sure how this would work with things that don't have directories like styled looks or call sheet -- we would require user to select a campaign again essentially.

My other solution was to render an edit profile and logout button.

Fixes
- Adjusted dropzone to be 94vh to allow room for the heading to be clicked (no click zone). Also users will most likely not drag an image to upload inside of the header, so this works fine.

Resources
- react-modal root directory in Next.js: https://www.reddit.com/r/nextjs/comments/q65otv/reactmodal_in_nextjs/
- Remove default styling on react-modal: http://reactcommunity.org/react-modal/styles/

--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -30,10 +30,10 @@
 
   &__dropzone {
     position: fixed;
-    height: 100vh;
+    height: 94vh;
     // height: -webkit-fill-available;
     width: 100vw;
-    top: 0;
+    bottom: 0;
     // background-color: rgba($color: #ff0000, $alpha: 0.1);
   }
 }
