--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -23,10 +23,27 @@
   }
 
   &__menu {
-    visibility: hidden;
+    display: none;
     flex: 1;
     text-align: right;
+
+    &__container {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    &__mobile {
+      align-self: center;
+    }
   }
+
+  // &__modal {
+  //   position: absolute;
+  //   background-color: red;
+  //   height: 100%;
+  //   width: 100%;
+  // }
 }
 
 .hidden {
