--- a/components/Moodboard/Moodboard.module.scss
+++ b/components/Moodboard/Moodboard.module.scss
@@ -31,4 +31,9 @@
     width: 100%;
     border: 0.5px solid $black;
   }
+
+  &__add {
+    border: 0.5px solid $black;
+    min-height: 150px;
+  }
 }
