--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -34,6 +34,7 @@
     // height: -webkit-fill-available;
     width: 100vw;
     bottom: 0;
-    // background-color: rgba($color: #ff0000, $alpha: 0.1);
+    // pointer-events: none;
+    background-color: rgba($color: #ff0000, $alpha: 0.1);
   }
 }
