--- a/components/Moodboard/Moodboard.module.scss
+++ b/components/Moodboard/Moodboard.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   column-count: 2;
   column-gap: 1rem;
-  margin: 0 1rem;
+  margin: 0 1rem 2.5rem 1rem;
 
   // &__container {
   //   position: relative;
@@ -27,9 +27,17 @@
     // width: 100%;
     background-color: #eee;
     display: inline-block;
-    margin: 0 0 1em;
+    margin-bottom: 1rem;
     width: 100%;
     border: 0.5px solid $black;
+    vertical-align: middle;
+  }
+
+  &__text {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 0.5px solid $black;
+    overflow-wrap: break-word;
   }
 
   &__add {
