feat/refactor: Add paste button to moodboard + check user auth on pages
Paste button
- This was a big challenge, I had to essentially do another version of the paste on window because they use separate logic. The paste button uses Clipboard API, while the paste on window can take clipboard data from the event.
- The only caveat with this is that users can't copy local files from their computer and click "paste", they have to do it on window.
- User can paste image urls, text, and images copied from the web. Only local files is not supported.

User auth
- Checks if user is authenticated on /auth/ pages, so they can't access certain pages without being logged in (i.e. creating a campaign, setting profile)
- This will be added to more pages in the future.

Verify-request
- Styled this and also added an "open mail app" button that is an html link to make a message to hi@cur8.world, but it's really just an easy access button for the user to open mail app and confirm login.

Resources
- Read from clipboard: https://developer.mozilla.org/en-US/docs/Web/API/Clipboard/read
- Clipboard API docs: https://docs.w3cub.com/dom/clipboard/readtext

--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -19,6 +19,10 @@
     visibility: hidden;
   }
 
+  &__paste {
+    margin-right: 0.5rem;
+  }
+
   &__dropzone {
     position: fixed;
     height: 94vh;
