--- a/components/Moodboard/Moodboard.module.scss
+++ b/components/Moodboard/Moodboard.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   column-count: 2;
   column-gap: 1rem;
-  margin: 0 1rem 2.5rem 1rem;
+  margin: 0 1rem 3rem 1rem;
 
   // &__container {
   //   position: relative;
@@ -38,6 +38,7 @@
     margin-bottom: 1rem;
     border: 0.5px solid $black;
     overflow-wrap: break-word;
+    break-inside: avoid-column;
   }
 
   &__add {
