--- a/styles/partials/base/_typography.scss
+++ b/styles/partials/base/_typography.scss
@@ -96,7 +96,8 @@ button {
 p,
 label,
 input,
-textarea {
+textarea,
+a {
   // Mobile
   font-family: "F-Light", Arial, Helvetica, sans-serif;
   font-size: 0.5625rem; // 9px
