--- a/components/Moodboard/Moodboard.module.scss
+++ b/components/Moodboard/Moodboard.module.scss
@@ -31,6 +31,20 @@
     width: 100%;
     border: 0.5px solid $black;
     vertical-align: middle;
+
+    &__options {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1rem;
+    }
+
+    &__option:first-child {
+      margin-right: 1rem;
+    }
+
+    &__option:hover {
+      text-decoration: underline;
+    }
   }
 
   &__text {
