feat: Add models page and functionality. + minor bug fix
Models Page
- Pulls the models from the database and maps over them to create the menu.
- When a model's name is selected we find the selected model by filtering the array.
- If there is no selected model, we default to the first model -> model[0]

Meatball Menu
- Created a new component for the meatball menu pop up that gets rendered on modal click.

Styling
- The modal doesn't blur out the background, but instead once the modal is toggled via state (modalIsOpen) then it triggers a conditional class that adds the CSS stylingt to blur the entire <main> container.

Bug:
- When I refactored my API structure, I had renamed the campaign object to createCampaign which broke the function and prevented it from going to the next page.
  - Solution: renamed back to to "campaign".

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,13 @@
 @use "@/partials/abstracts/mixins" as *;
 @use "@/partials/abstracts/variables" as *;
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+  margin: 0 1rem;
+}
+
 button,
 .button {
   color: $black;
@@ -15,5 +22,31 @@ button,
 
   @include tablet {
     padding: $p1 $p2;
+  }
+}
+
+.meatball {
+  &__menu {
+    background-color: #ffffff;
+    padding: 1rem;
+    border: 0.5px solid $black;
+    text-align: right;
+    width: 195px;
+    margin-bottom: 2rem;
+  }
+
+  &__toggle {
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+  }
+
+  &__item {
+    text-transform: uppercase;
+    padding-bottom: 0.5rem;
+  }
+
+  &__add {
+    padding-top: 2rem;
   }
 }
