feat/refactor: Add wardrobe page and features, bug fixes to moodboard page.
Moodboard Page
- On delete, it was looking for a url. It was always trying to parse a value before it conditionally checked if it existed, and when it didn't exist, it would throw an error.
  - Solution: selected.url?.startsWith -> don't use a parse, no need.
- Column breaks were fixed by adding inline-block to the individual images blocks.

Wardrobe Page
- Data is displayed from database
- Meatball menu is fully functional and filters out the items by category.
  - I used a set to prevent duplicate values in the categories list.
  - Created a handler that passes the selected category as a param to our filter.

Resources:
- Prevent column breaks when clicking to show options: https://stackoverflow.com/a/8507148/19416953
- Create a set of values mapped from an array. https://stackoverflow.com/a/49438569/19416953
- Instead of maping a new array from set (object), do this: https://stackoverflow.com/a/42624575/19416953

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,7 +36,7 @@ button,
   }
 
   &__toggle {
-    position: absolute;
+    position: fixed;
     right: 2rem;
     bottom: 2rem;
   }
@@ -49,4 +49,8 @@ button,
   &__add {
     padding-top: 2rem;
   }
+}
+
+.blur {
+  filter: blur(8px);
 }
