--- a/components/Wardrobe/Wardrobe.module.scss
+++ b/components/Wardrobe/Wardrobe.module.scss
@@ -1,7 +1,7 @@
 @use "@/partials/abstracts/mixins" as *;
 @use "@/partials/abstracts/variables" as *;
 
-.moodboard {
+.wardrobe {
   position: relative;
   column-count: 2;
   column-gap: 1rem;
@@ -9,12 +9,17 @@
 
   &__item {
     display: inline-block;
+    margin-bottom: 1rem;
+  }
+
+  &__text {
+    text-align: center;
   }
 
   &__image {
     background-color: #eee;
     display: inline-block;
-    margin-bottom: 1rem;
+    margin-bottom: 0.25rem;
     width: 100%;
     border: 0.5px solid $black;
     vertical-align: middle;
@@ -32,18 +37,5 @@
     &__option:hover {
       text-decoration: underline;
     }
-  }
-
-  &__text {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border: 0.5px solid $black;
-    overflow-wrap: break-word;
-    break-inside: avoid-column;
-  }
-
-  &__add {
-    border: 0.5px solid $black;
-    min-height: 150px;
   }
 }
