refactor: Added X button on menu, fix image stretch on mobile for models.
X button is placed in same place as the menu to easily click and exit out.
Image stretching was fixed by wrapping the images in a div.

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 
 .header {
   display: flex;
+  position: relative;
   justify-content: space-between;
   margin: 1rem;
 
@@ -37,13 +38,12 @@
       align-self: center;
     }
   }
+}
 
-  // &__modal {
-  //   position: absolute;
-  //   background-color: red;
-  //   height: 100%;
-  //   width: 100%;
-  // }
+.menu__exit {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 
 .hidden {
