checkpoint: Create looks builder page, add crop. * before converting to serverless functions
This is a checkpoint in case converting to serverless functions mess up somehow.
Need to move from /pages/api to /api/

- Basic setup of the looks builder page with crop function from react-image-crop, also installed react-cropper but its much slower.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -49,8 +49,16 @@ button,
   &__add {
     padding-top: 2rem;
   }
+
+  &__active {
+    text-decoration: underline;
+  }
 }
 
 .blur {
   filter: blur(8px);
+}
+
+.img-preview {
+  overflow: hidden;
 }
