--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -22,13 +22,14 @@
   &__paste {
     margin-right: 0.5rem;
   }
+}
 
-  &__dropzone {
-    position: fixed;
-    height: 94vh;
-    // height: -webkit-fill-available;
-    width: 100vw;
-    bottom: 0;
-    background-color: rgba($color: #ff0000, $alpha: 0.1);
-  }
+.dropzone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $light-gray;
+  border: 0.5px solid $black;
+  aspect-ratio: 1 / 1;
+  margin: 1rem;
 }
