--- a/styles/partials/base/_reset.scss
+++ b/styles/partials/base/_reset.scss
@@ -113,3 +113,24 @@ input[type="date"]::-webkit-inner-spin-button {
 input[type="date"]::-webkit-clear-button {
   z-index: 1;
 }
+
+select {
+  // A reset of styles, including removing the default dropdown arrow
+  appearance: none;
+  -webkit-appearance: none; /* turn off drop-down arrow*/
+  -moz-appearance: none;
+  text-align: center;
+  text-align: -webkit-center;
+  text-align: -moz-center;
+  text-align-last: center;
+  // Additional resets for further consistency
+  background-color: transparent;
+  border: none;
+  // padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  // font-family: inherit;
+  // font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+}
