--- a/styles/pages/Wardrobe.module.scss
+++ b/styles/pages/Wardrobe.module.scss
@@ -17,12 +17,14 @@
   }
 
   &__image {
-    background-color: #eee;
+    // background-color: #eee;
+    background-color: white;
     display: inline-block;
     margin-bottom: 0.25rem;
     width: 100%;
     border: 0.5px solid $black;
     vertical-align: middle;
+    padding: 0.5rem;
 
     &__options {
       display: flex;
