feat: Wardrobe Add Item — Form Validation & Styling
There were a few edge cases that we needed to design around:

Scenario 1 (Default):
1. User crops once, or doesn't crop at all
2. User submits form
Default, most likely case.
The problem here was that since we were adding all the image urls into the array, and also deleting urls from that same array, we needed to tell the program to NOT delete our image.
    Solution:
    - Set conditional -> if transparentImageURLs.length is greater than 1, then delete urls.

Scenario 2 (Multiple Renders):
1. User crops
2. User adjusts crop
3. User submits form
This edge case has to deal with two or more image urls.
    Solution:
    - Create an array to store the returned image URLs
    - Use the most recent one (last item in array) to submit to database
    - Delete the rest of the URLs from S3 Bucket
      -> pop() the value out of the array to protect our final image url
      -> map over the array and delete

Scenario 3 (Interrupting Procesing):
1. User crops
2. User adjusts crop
3. User submits form while image is processing
This edge case has to deal with two or more image urls, but also the interruption.
We can't let the user submit here and interrupt the process, so some validation is needed.
    Solution:
    - Check if user has submitted form (hasSubmitted)
    - If the user has submitted the form, and the function is in progress (rembgInProgress), then return a console message when user submits and don't run the rest of the code.
    - Under the same conditions, render a message on the page to try again in a few seconds.
    - Bonus: add a button disabled state, or replace the text inside the button to say: "Processing..."

Alternative Solutions:
- Filtering all image urls EXCEPT our final image url instead of using
  - Why I didn't use it:
  -> Performance cost to loop over array vs removing one value.

Resources:
- Array.pop(): https://stackoverflow.com/a/19544496
- Handling errors in react-hook-form: https://react-h

--- a/components/Upload/Upload.module.scss
+++ b/components/Upload/Upload.module.scss
@@ -1,6 +1,7 @@
 @use "@/partials/abstracts/mixins" as *;
 @use "@/partials/abstracts/variables" as *;
 
+// moodboard page -> file picker buttons
 .upload {
   &__buttons {
     display: flex;
@@ -24,6 +25,11 @@
   }
 }
 
+// wardrobe page -> react-image-crop + react-dropzone
+.crop {
+  margin: 1rem;
+}
+
 .dropzone {
   display: flex;
   align-items: center;
@@ -32,4 +38,15 @@
   border: 0.75px solid $black;
   aspect-ratio: 1 / 1;
   margin: 1rem;
+}
+
+.preview {
+  width: 100vw;
+  object-fit: contain;
+  // aspect-ratio: 1 / 1;
+  border: 0.75px solid $black;
+}
+
+.hidden {
+  display: none;
 }
