--- a/styles/pages/Wardrobe.module.scss
+++ b/styles/pages/Wardrobe.module.scss
@@ -7,6 +7,10 @@
   column-gap: 1rem;
   margin: 0 1rem 3rem 1rem;
 
+  &__create {
+    margin: 1rem;
+  }
+
   &__item {
     display: inline-block;
     margin-bottom: 1rem;
@@ -39,5 +43,13 @@
     &__option:hover {
       text-decoration: underline;
     }
+  }
+
+  &__brand {
+    text-transform: uppercase;
+  }
+
+  &__description {
+    text-transform: capitalize;
   }
 }
