--- a/components/Blocks/Blocks.module.scss
+++ b/components/Blocks/Blocks.module.scss
@@ -4,7 +4,7 @@
 .container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
+  grid-gap: $mobile-grid-gap;
   margin: 0 1rem;
 }
 
