--- a/components/Forms/Form.module.scss
+++ b/components/Forms/Form.module.scss
@@ -14,7 +14,7 @@
 .container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
+  grid-gap: $mobile-grid-gap;
   margin: 0 1rem;
 }
 
