checkpoint: Modify Prisma DB, Add dresses to Wardrobe, Query for Saved looks
Modify Prisma DB
- Added top2, accessory 3 + 4
- Now that I look at this, we are missing dresses for savedLooks
  -> Add dresses to db, but have to find a way to conditionally render or conditionally save data (ie. if no top, check if there a dress and render that instead. Have to make them both nullable and make sure nobody can submit both)
  -> A dress is a category that conflicts with tops.

Add Dresses to Wardrobe
- On the wardrobe add item form, the user can add a dress.

Query for saved savedLooks
-> Inside of the looks builder page, we pull all saved looks and their objects on load using Prisma relational querying.

Resources
- Prisma relational querying: https://www.prisma.io/docs/concepts/components/prisma-client/relation-queries
- Prisma version control / migrations: https://supabase.com/docs/guides/integrations/prisma
- Prisma custom migrations: https://www.prisma.io/docs/guides/database/developing-with-prisma-migrate/customizing-migrations#renaming-a-field

--- a/styles/partials/base/_typography.scss
+++ b/styles/partials/base/_typography.scss
@@ -78,8 +78,7 @@ h4 {
   }
 }
 
-h5,
-button {
+h5 {
   // Mobile
   font-family: "F-Book", Arial, Helvetica, sans-serif;
   font-size: 0.5625rem; // 9px
@@ -95,6 +94,7 @@ button {
 
 p,
 label,
+button,
 input,
 select,
 option,
