feat: Looks Builder displays items when selected
When a user selects items from each block, the images of the items display inside of the blocks.

This is the barebones functionality.

How does this work?
- Instead of storing only the id of the selected item inside of state, I also store the image url. -> {id: item.id, url: item.url}
- Then we conditionally render every block -> {!top ? h5 : img }. If there is no item, render the empty block, but if there is, use the image url from state.

Next Step:
- On save, submit ids of each item to database.
- Pull saved looks on page load and have it ready for the user to view.

To Do:
- Add Models, Delete Models
- Add Moodboard, Delete Models
- Delete wardrobe item

Resources:
- Conditional Styling in React: https://stackoverflow.com/a/66508849
- Contain images to div: https://stackoverflow.com/a/3029434

--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -11,6 +11,15 @@
 }
 
 .block {
+  &__filled {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  &__filled__accessory {
+    max-width: 100%;
+  }
+
   &__head {
     width: calc(25% - 0.25rem);
     background-color: $light-gray;
