feat: Looks Builder - Add multiple accessories
Allow users to add multiple accessories to their looks.

Attempts
- Initially, I tried to create an array for tops and accessories to hold the multiple objects, but this solution failed since it would add each new selected item onto the end of the array, instead of replacing the current item.
- A solution to this is to limit the array to 4 items, and then use slice().

Solution
- I ended up not opting for an array and instead creating a new state for each top and accessory.
- This introduced a new problem: I needed to convert the previous if/else statement that used category as a param to become more explicit.
  -> changed this to a switch statement inside of handleFilter() which clearly defines the inputs and outputs.

Fix:
- prop style did not match (react hydration error)
 -> https://nextjs.org/docs/messages/react-hydration-error
 -> error within conditional style
    -> prev: style={{ backgroundColor: accessory4 ? "white" : "" }}
    -> new: style={{ backgroundColor: accessory4 ? "white" : "#f2f2f2" }}
        this gives it a fallback state which is aligned with the color on the stylesheet.

Next Steps:
- onSubmit, store the ids from state to the database
- pull the images from the ids on load using getServerSideProps
- create a ui that renders those images into 2col

Resources:
- Multiple switch cases: https://stackoverflow.com/a/34834388
  - Switch case fall-through example MDN: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/switch
- Unused:
  - Creating an empty array of a given size: https://stackoverflow.com/questions/34937349/javascript-create-empty-array-of-a-given-size
  - startsWith(): https://www.w3schools.com/jsref/jsref_startswith.asp
  - Add objects to array in state: https://stackoverflow.com/a/68235692

--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -22,7 +22,6 @@
 
   &__head {
     width: calc(25% - 0.25rem);
-    background-color: $light-gray;
     aspect-ratio: 1/1;
     @include looksBlock;
 
@@ -36,7 +35,12 @@
   &__accessory {
     grid-column: 1 / span 1;
     aspect-ratio: 1 / 1;
+    margin-bottom: 0.5rem;
     @include looksBlock;
+
+    &__wrapper {
+      // grid-auto-flow: dense;
+    }
   }
 
   &__top {
