checkpoint: Split up conditional rendering for Looks Builder, prepare for Saved Looks integration.
In the previous build, we used a ternary conditional to say: if the activeBlock was anything other than top/bottom/accessory/shoes etc., then it MUST be the model's faces.

This caused problems because when we started to use the same modal to render the Saved Looks, the faces would also be there because it falls under the "ELSE" condition.

We had to stop using a ternary and use the logical operator && to explicitly isolate both scenarios: either the user has activeBlock for wardrobe pieces, or faces.

Now when the user clicks the "View Saved" button and opens the modal, it's empty. We can now conditionally render the saved looks in this space.

Other Changes
- Updated to Next.js 12.3, next/image still buggy.
  - Created a page under campaignId called "test", use this as a testing environment.
- Created a Wardrobe Component and tried to pass down all the state as props. Everything console logs correctly, and state is passed down, but for some reason can't get it to render.

Resources
- Conditional Rendering — Inline If with Logical && Operator: https://reactjs.org/docs/conditional-rendering.html#inline-if-with-logical--operator

--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -47,10 +47,6 @@
     aspect-ratio: 1 / 1;
     margin-bottom: 0.5rem;
     @include looksBlock;
-
-    &__wrapper {
-      // grid-auto-flow: dense;
-    }
   }
 
   &__top {
@@ -91,3 +87,26 @@
   left: 50%;
   transform: translate(-50%, 0);
 }
+
+// .test {
+//   &__image {
+//     grid-column: 2 / span 2;
+//     border: 1px solid $black;
+//     object-fit: contain;
+//     height: fit-content;
+//   }
+
+//   &__container {
+//     display: grid;
+//     grid-template-columns: repeat(4, 1fr);
+//     grid-gap: $mobile-grid-gap;
+//     // position: relative;
+//     height: fit-content;
+//   }
+
+//   &__grid {
+//     // display: grid;
+//     // grid-template-columns: repeat(4, 1fr);
+//     // grid-gap: $mobile-grid-gap;
+//   }
+// }
