--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -12,7 +12,7 @@
 
 .block {
   &__main {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 3;
 
     & > * {
       margin-bottom: 0.5rem;
@@ -42,27 +42,33 @@
     }
   }
 
+  &__scroll {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 65%;
+    grid-gap: $mobile-grid-gap;
+    // border: 1px solid red;
+    overflow-x: auto;
+  }
+
   &__accessory {
-    grid-column: 1 / span 1;
     aspect-ratio: 1 / 1;
-    margin-bottom: 0.5rem;
+    margin-bottom: $mobile-grid-gap;
     @include looksBlock;
   }
 
   &__top {
-    grid-column: 2 / span 2;
     aspect-ratio: 0.9 / 1;
     @include looksBlock;
   }
 
   &__bottom {
-    grid-column: 2 / span 2;
     aspect-ratio: 0.8 / 1;
     @include looksBlock;
   }
 
   &__shoes {
-    grid-column: 2 / span 2;
+    width: 65%;
     aspect-ratio: 1.5 / 1;
     @include looksBlock;
   }
