--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -55,6 +55,11 @@
     aspect-ratio: 1 / 1;
     margin-bottom: $mobile-grid-gap;
     @include looksBlock;
+
+    &__wrapper {
+      max-height: 544px;
+      overflow-y: auto;
+    }
   }
 
   &__top {
@@ -93,26 +98,3 @@
   left: 50%;
   transform: translate(-50%, 0);
 }
-
-// .test {
-//   &__image {
-//     grid-column: 2 / span 2;
-//     border: 1px solid $black;
-//     object-fit: contain;
-//     height: fit-content;
-//   }
-
-//   &__container {
-//     display: grid;
-//     grid-template-columns: repeat(4, 1fr);
-//     grid-gap: $mobile-grid-gap;
-//     // position: relative;
-//     height: fit-content;
-//   }
-
-//   &__grid {
-//     // display: grid;
-//     // grid-template-columns: repeat(4, 1fr);
-//     // grid-gap: $mobile-grid-gap;
-//   }
-// }
